Fixed messaging CSS alignment

--- a/public/css/messaging.css
+++ b/public/css/messaging.css
@@ -37,4 +37,5 @@
 
 .div-message{
     margin-left: 5%;
+    margin-top: 4%;
 }
